syntax = "proto3";
option csharp_namespace = "Itmo.Dev.Asap.Core.SubmissionWorkflow";

import "models/submission_rate.proto";

service SubmissionWorkflowService {
  rpc Approved(ApprovedRequest) returns (ApprovedResponse);
  rpc Reactivated(ReactivatedRequest) returns (ReactivatedResponse);
  rpc Updated(UpdatedRequest) returns (UpdatedResponse);
  rpc Accepted(AcceptedRequest) returns (AcceptedResponse);
  rpc Rejected(RejectedRequest) returns (RejectedResponse);
  rpc Abandoned(AbandonedRequest) returns (AbandonedResponse);
  rpc NotAccepted(NotAcceptedRequest) returns (NotAcceptedResponse);
}

message ApprovedRequest {
  string issuer_id = 1;
  string submission_id = 2;
}

message ApprovedResponse {
  string message = 1;
}

message ReactivatedRequest {
  string issuer_id = 1;
  string submission_id = 2;
}

message ReactivatedResponse {
  string message = 1;
} 

message UpdatedRequest {
  string issuer_id = 1;
  string user_id = 2;
  string assignment_id = 3;
  string payload = 4;
}

message UpdatedResponse {
  bool is_created = 1;
  SubmissionRate submission = 2;
}

message AcceptedRequest {
  string issuer_id = 1;
  string submission_id = 2;
}

message AcceptedResponse {
  string message = 1;
}

message RejectedRequest {
  string issuer_id = 1;
  string submission_id = 2;
}

message RejectedResponse {
  string message = 1;
}

message AbandonedRequest {
  string issuer_id = 1;
  string submission_id = 2;
  bool is_terminal = 3;
}

message AbandonedResponse {
  string message = 1;
}

message NotAcceptedRequest {
  string issuer_id = 1;
  string submission_id = 2;
}

message NotAcceptedResponse {
  string message = 1;
}